Gateway/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
 name: drivers-gateway-service
 namespace:  ingress
spec:
 type: ClusterIP 
 selector:
    app: drivers-gateway
 ports:
  - port: 80
